css/style.css
*{
  margin:0 auto;
  padding:0;
}

body{
  background-image: url("../img/matrix.jpg");
  background-size: cover;
  font-family: "Roboto", sans-serif;
  font-size: 12px;
  color: white;
}

h1,h2,h3{
  font-size: 1.4em;
}

#my_password{
  padding-bottom: 20px;
  border-bottom: 2px solid #92e5a1;
  color:white;
  font-size: 1.5em;
  text-decoration: none;
}

.container{
  margin-top: 90px;
  width:100%;
  height: calc(100vh - 90px);
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

}

.my_title{
  position: fixed;
  color: #92e5a1;
  top:0;
  left:0;
  width:100%;
  height:90px;
  text-align: center;
  background-color: rgba(13, 2, 8, 0.6);
}

.user{
  color:#80ce87;
  animation: mymove 5s infinite;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  min-height: 400px;
  min-width:400px;
  border-radius: 50%;
  background-image: linear-gradient(rgba(0, 143, 17,0.8),rgba(0, 59, 0,0.8));
}

@keyframes mymove {
  0% {transform: scale(1);}
  80% {transform: scale(1.1);}
  100% {transform: scale(1);}
}

